git/aws-digifusion/infra/terraform/envs/model1/security.tf
resource "aws_security_group" "poc_sg" {
  name   = "poc-sg"
  vpc_id = aws_vpc.poc_vpc.id

  ingress {
    from_port   = 5678
    to_port     = 5678
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 5678
    to_port     = 5678
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
